# PointCloudRenderer

./: .gitignore  .gitmodules  CMakeLists.txt
include/: Renderer.h  Triangle.h  Vertex.h
shaders/: shader.frag  shader.vert
src/: Renderer.cpp  Triangle.cpp  main.cpp
